# Onyx

./: .gitignore  CMakeLists.txt  Onyx.sln  README.md  vcpkg.json
Asteroids/Common/: Common.vcxproj  Common.vcxproj.filters  RegisterReflectors.cpp
Asteroids/Common/Assets/: asteroids.pack  imgui.ini
Asteroids/Common/Assets/Textures/Foozle_2DS0011_Void_MainShip/Foozle_2DS0011_Void_MainShip/Main ship weapons/PNGs/: imgui.ini
Asteroids/Common/Assets/Textures/Foozle_2DS0015_Void_EnvironmentPack/Foozle_2DS0015_Void_EnvironmentPack/Asteroids/PNGs/: imgui.ini
Asteroids/Common/Modules/: Core.h  Core.inl  CoreReflectors.cpp  CoreSystems.cpp  Physics.h  Physics.inl  PhysicsReflectors.cpp  PhysicsSystems.cpp  Player.h  Player.inl  PlayerReflectors.cpp  PlayerSystems.cpp
Asteroids/Editor/: Editor.vcxproj  EditorWindows.cpp  ScenePreviewer.cpp  ScenePreviewer.h  imgui.ini  main.cpp
Asteroids/Game/: Game.vcxproj  main.cpp
AsteroidsCommon/: AsteroidsCommon.vcxproj  RegisterReflectors.cpp
AsteroidsCommon/Assets/: imgui.ini
AsteroidsCommon/Assets/Textures/: imgui.ini
AsteroidsCommon/Assets/Textures/Foozle_2DS0011_Void_MainShip/Foozle_2DS0011_Void_MainShip/Main Ship/Main Ship - Shields/PNGs/: imgui.ini
AsteroidsCommon/Assets/Textures/Foozle_2DS0011_Void_MainShip/Foozle_2DS0011_Void_MainShip/Main Ship/Main Ship - Weapons/PNGs/: imgui.ini
AsteroidsCommon/Assets/Textures/Foozle_2DS0015_Void_EnvironmentPack/Foozle_2DS0015_Void_EnvironmentPack/Backgrounds/PNGs/Condesed/: imgui.ini
AsteroidsCommon/Modules/: Core.h  CoreReflectors.cpp  CoreSystems.cpp  Physics.h  PhysicsReflectors.cpp  Player.h  PlayerReflectors.cpp  PlayerSystems.cpp
AsteroidsEditor/: AsteroidsEditor.vcxproj  ScenePreviewer.cpp  ScenePreviewer.h  imgui.ini  main.cpp
AsteroidsGame/: AsteroidsGame.vcxproj  main.cpp
ChronoCommon/: ChronoCommon.vcxproj  ChronoCommon.vcxproj.filters  RegisterReflectors.cpp  RegisterReflectors.h  ScriptNodes.cpp  ScriptNodes.h  SystemContexts.h
ChronoCommon/Assets/: HelloWorld.pack  NodeEditor.json  Test.pack  TransformTest.pack  chrono.pack  chrono.pack (2).bkp  chrono.pack (3).bkp  chrono.pack (4).bkp  chrono.pack (5).bkp  chrono.pack (7).bkp  chrono.pack (8).bkp  chrono.pack.bkp  imgui.ini
ChronoCommon/Assets/Textures/: imgui.ini
ChronoCommon/Assets/Textures/Foozle_2DS0015_Void_EnvironmentPack/Foozle_2DS0015_Void_EnvironmentPack/Asteroids/PNGs/: imgui.ini
ChronoCommon/Components/: Camera.h  Physics.h  Player.h  Spawner.h  Team.h  health.h
ChronoCommon/Modules/: Core.h  CoreReflectors.cpp  CoreSystems.cpp  Physics.h  PhysicsReflectors.cpp  PhysicsSystems.cpp  Player.h  PlayerReflectors.cpp  PlayerSystems.cpp
ChronoCommon/ScriptNodes/: Camera.h  CameraImpl.h  Physics.h  PhysicsImpl.h  Player.h  PlayerImpl.h
ChronoCommon/Systems/: Camera.cpp  Camera.h  Physics.cpp  Physics.h  Player.cpp  Player.h
ChronoEditor/: ChronoEditor.vcxproj  ChronoEditor.vcxproj.filters  EditorWindows.cpp  ScenePreviewer.cpp  ScenePreviewer.h  WorldPreviewWindow.cpp  WorldPreviewWindow.h  WorldScriptPreviewWindow.cpp  WorldScriptPreviewWindow.h  imgui.ini  main.cpp
ChronoGame/: ChronoGame.vcxproj  main.cpp
Common/: Asserts.h  AssetManager.h  Assets.cpp  Assets.h  Clock.h  Common.vcxproj  Common.vcxproj.filters  InputTypes.h  Log.cpp  Log.h  Random.h  Utils.cpp  Window.h  imgui.ini  onyx.pack (2).bkp  types.h
Common/BjSON/: BjSON.cpp  BjSON.h  BjSON_impl.h
Common/Components/: Transform.h  TransformScriptNodesImpl.h
Common/ECS/: CommandBuffer.h  ComponentReflector.h  Entity.h  Query.cpp  Query.h  Scene.cpp  Scene.h  System.h  SystemContexts.h  SystemSet.h  World.h
Common/ECS/Components/: Sprite.h  SpriteScriptNodes.h  SpriteScriptNodesImpl.h  Transform.cpp  Transform.h  TransformScriptNodes.h  TransformScriptNodesImpl.h
Common/ECS/Modules/: Core.h  CoreReflectors.cpp  CoreSystems.cpp  Graphics2D.h  Graphics2DReflectors.cpp  Graphics2DSystems.cpp
Common/ECS/Systems/: Rendering2D.cpp  Rendering2D.h  Transform.cpp  Transform.h
Common/Editor/: ScriptEditorWindow.h  Window.h  WindowImpl.h
Common/Graphics/: Camera.h  DeleteQueue.h  FrameContext.h  GraphicsContext.h  GraphicsResource.h  RenderTarget.h  Shader.cpp  Shader.h  SpriteRenderer.h  Texture.cpp  Texture.h
Common/Graphics/Shaders/: SpriteRenderer.frag  SpriteRenderer.vert  imgui.ini
Common/LowLevel/: LowLevelInput.cpp  LowLevelInput.h  LowLevelInterface.cpp  LowLevelInterface.h  WindowManager.cpp  WindowManager.h
Common/LowLevel/Impl/: SDLInput.cpp  SDLInput.h  SDLWindowManager.cpp  SDLWindowManager.h  VulkanDeleters.h  VulkanGraphicsContext.cpp  VulkanGraphicsContext.h  VulkanImplementations.cpp
Common/Scripting/: CommonScriptNodes.h  CommonScriptNodesImpl.h  Script.cpp  Script.h  ScriptMacros.h  ScriptManager.h
Editor/: Editor.vcxproj
Engine/: Engine.vcxproj
Onyx/: Asserts.h  Assets.cpp  Assets.h  CommonIncludes.h  InputTypes.cpp  Log.cpp  Log.h  Multithreading.cpp  Multithreading.h  Onyx.vcxproj  Onyx.vcxproj.filters  Random.h  Utils.cpp  Utils.h  Window.h  imgui.ini  onyx.pack  onyx.pack.bkp  types.h
Onyx/BjSON/: BjSON.cpp  BjSON.h  BjSON_impl.h
Onyx/ECS/: CommandBuffer.h  ComponentReflector.h  ComponentTable.cpp  ComponentTable.h  Entity.h  Query.cpp  Query.h  Scene.cpp  Scene.h  System.h  SystemContexts.h  SystemSet.h  World.cpp  World.h
Onyx/ECS/Modules/: Core.h  Core.inl  CoreReflectors.cpp  CoreSystems.cpp  Graphics2D.h  Graphics2D.inl  Graphics2DReflectors.cpp  Graphics2DSystems.cpp
Onyx/Editor/: Window.h  WindowImpl.h
Onyx/Graphics/: Camera.cpp  Camera.h  DeleteQueue.h  FrameContext.h  GraphicsContext.h  GraphicsResource.h  Shader.cpp  Shader.h  SpriteRenderer.h  Texture.cpp  Texture.h
Onyx/Graphics/Shaders/: SpriteRenderer.frag
Onyx/LowLevel/: LowLevelInput.cpp  LowLevelInput.h  LowLevelInterface.cpp  LowLevelInterface.h  WindowManager.cpp  WindowManager.h
Onyx/LowLevel/Impl/: CocoaWrappers.h  CocoaWrappers.m  SDLInput.cpp  SDLInput.h  SDLWindowManager.cpp  SDLWindowManager.h  VulkanDeleters.h  VulkanGraphicsContext.cpp  VulkanGraphicsContext.h  VulkanImplementations.cpp
(+7 files in other folders)
